Bug 306672 - Kexi can crash when saving changes to design of table used elsewhere
Summary: Kexi can crash when saving changes to design of table used elsewhere
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Tables (other bugs)
Version First Reported In: 2.5.2
Platform: unspecified All
: NOR major
Target Milestone: 2.5
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-12 12:42 UTC by Jarosław Staniek
Modified: 2014-02-12 10:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2012-09-12 12:42:13 UTC
Kexi asks for permission for closing windows that refer to tables used elsewhere. But it still can crash while closing the windows.

Reproducible: Sometimes

Steps to Reproduce:
1. Open query Q that uses table T in design mode
2.  Open a table T in design mode, change the design and click Save button
3. Kexi asks for closing the query Q, accept that


Actual Results:  
Kexi crashes sometimes.

Expected Results:  
Kexi properly saved the design after closing related windows.

This bug leads to possible loss of altered design, user has to repeat changes.
Comment 1 Jarosław Staniek 2012-09-12 12:50:26 UTC
Git commit ef7b453aa578f46e47081882a507fde9bf064b79 by Jaroslaw Staniek.
Committed on 12/09/2012 at 14:43.
Pushed by staniek into branch 'calligra/2.5'.

Fix possible crash when saving changes to design of table used elsewhere
FIXED-IN:2.5.3

M  +4    -3    kexi/kexidb/connection.cpp

http://commits.kde.org/calligra/ef7b453aa578f46e47081882a507fde9bf064b79
Comment 2 Jarosław Staniek 2012-09-12 12:51:17 UTC
Git commit e410a4f4fc9da2ee37c18263f6bae998ef606335 by Jaroslaw Staniek.
Committed on 12/09/2012 at 14:43.
Pushed by staniek into branch 'master'.

Fix possible crash when saving changes to design of table used elsewhere
FIXED-IN:2.5.3

M  +4    -3    libs/db/connection.cpp

http://commits.kde.org/calligra/e410a4f4fc9da2ee37c18263f6bae998ef606335
Comment 3 Jarosław Staniek 2012-10-04 23:44:49 UTC
Git commit 0bc883235ec807931a6955d2753c637b72653915 by Jaroslaw Staniek.
Committed on 12/09/2012 at 14:43.
Pushed by staniek into branch 'kexi-altertable-staniek'.

Fix possible crash when saving changes to design of table used elsewhere
FIXED-IN:2.5.3

M  +4    -3    libs/db/connection.cpp

http://commits.kde.org/calligra/0bc883235ec807931a6955d2753c637b72653915
Comment 4 Jarosław Staniek 2013-11-11 23:28:53 UTC
Git commit 372a9e1766f64bcbf8fd4472e56a29cee3ec225f by Jaroslaw Staniek.
Committed on 23/10/2013 at 16:00.
Pushed by staniek into branch 'master'.

Fix possible crash when saving changes to design of table used elsewhere

from Calligra master e410a4f4fc9da2ee37c18263f

M  +5    -6    Predicate/Connection.cpp

http://commits.kde.org/predicate/372a9e1766f64bcbf8fd4472e56a29cee3ec225f