Fix possible crash when saving changes to design of table used elsewhere

BUG:306672
FIXED-IN:2.5.3